# org-roam-anki

./: Cargo.toml  README.org  org-roam-anki.el
src/: anki.rs  cli.rs  lib.rs  main.rs  parse_org.rs  table.rs
tests/: basic.rs  playing_with_orgize.rs
