[package]
name = "org_roam_anki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
indextree = { version = "4.3.1" }
orgize = {  git = "https://github.com/smallstepman/orgize"  }
# orgize = {  git = "https://github.com/rust-lang/regex" version = "0.9.0", features = ["indexmap"] }
# rayon = "1.5.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
